<resources>
    <string name="app_name">AppRecycling</string>
    <string name="ingresar">Ingresar</string>
    <string name="title_activity_segunda2">SegundaActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_3">Activity3</string>

    //creamos relacion para las imagenes
    <string name="tv_titulo_simbolos">Simbolos del reciclaje</string>

    <string name="im_simbolo_reciclaje">Simbolo de reciclaje</string>
    <string name="im_simbolo_punto_verde">Simbolo Punto Verde</string>
    <string name="im_simbolo_tidyman">Tidyman</string>
    <string name="im_simbolo_pet">PET o PETE Polietileno tereftalato</string>
    <string name="im_simbolo_hdpe">HDPE Polietileno de alta densidad</string>
    <string name="im_simbolo_v">V o PVC Vinílicos o Cloruro de Polivinilo</string>
    <string name="im_simbolo_ldpe">LDPE Polietileno de baja densidad</string>
    <string name="im_simbolo_pp">PP Polipropileno</string>
    <string name="im_simbolo_ps">PS Poliestireno</string>
    <string name="im_simbolo_others">Other</string>
    <string name="im_simbolo_medicamentos">Punto Sigre de recogida de medicamentos</string>
    <string name="im_simbolo_electronicos">Residuos electronicos</string>
    <string name="im_simbolo_metales">Residuos de Metales</string>
    <string name="im_simbolo_vidrio">Residuos de Vidrio</string>
    <string name="im_simbolo_canecas">Colores de las canecas</string>

    <string name="bt_volver">Volver</string>
    <string name="itemvolver">Volver</string>

    <string name="txtviewmiayuda">Como volver en el menu</string>
    <string name="imv_miayuda1">Volver al menu</string>


    //creamos relacion para objetos en activity_home
    <string name="txt_bienvenida">BIENVENIDO A</string>
    <string name="imv_logo_home">Logo</string>
    <string name="imb_informacion">Informacion</string>
    <string name="imb_danos">Daños</string>
    <string name="imb_beneficios">Beneficios</string>
    <string name="imb_lugares">Lugares</string>
    <string name="txtviewinfo">Información</string>
    <string name="txtviewdanos">Daños</string>
    <string name="txtviewbeneficios">Beneficios</string>
    <string name="txtviewlugares">Lugares</string>
    <string name="imv_left_Home"></string>
    <string name="imv_right_Home"></string>
    <string name="title_activity_registro">registroActivity</string>
    <string name="title_activity_registrook">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    //creamos relacion para objetos en activity_info
    <string name="imb_tipos">Tipos de Reciclaje</string>
    <string name="imb_elementos">Elementos Reciclables</string>
    <string name="imb_cuidados">Cuidados Ambientales</string>
    <string name="txt_tipos">Tipos de reciclaje</string>
    <string name="txt_elementos">Elementos Reciclables</string>
    <string name="txt_cuidados">Cuidados Ambientales</string>
    <string name="imv_left_Info"></string>
    <string name="imv_right_Info"></string>
    <string name="title_activity_menu_app">MenuApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Grupo 1 Diplomado Aplicaciones Moviles</string>
    <string name="nav_header_subtitle">Diplomado@unad.edu.co</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ver Perfil</string>

    //creamos relacion para objetos en activity_info_tipos
    <string name="textviewtipos">Tipos de Reciclaje</string>
    <string name="imageviewlefttipos"></string>
    <string name="imageviewrighttipos"></string>

    //creamos relacion para objetos en activity_info_tipos_descripcion
    <string name="textviewtitulotiposdescripcion">Titulo_Descripcion</string>
    <string name="textviewtiposdescripcion">Descripcion</string>
    <string name="imvtiposdescripcion">imagen_Descripcion</string>


    //creamos relacion para objetos en activity_info_elementos_reciclables
    <string name="txtviewelementotitulo">Elementos Reciclables</string>
    <string name="txtviewelemento">Elementos</string>
    <string name="txtviewelementosi">Que Reciclar</string>
    <string name="txtviewelementono">Que No reciclar</string>
    <string name="imgviewpapel">Papel</string>
    <string name="imgbuttonpapelsi">si</string>
    <string name="imgbuttonpapelno">no</string>
    <string name="imgviewplastico">plastico</string>
    <string name="imgbuttonplasticosi">si</string>
    <string name="imgbuttonplasticono">no</string>
    <string name="imgviewvidrio">vidrio</string>
    <string name="imgbuttonvidriosi">si</string>
    <string name="imgbuttonvidriono">no</string>
    <string name="imgviewmetal">metal</string>
    <string name="imgbuttonmetalsi">si</string>
    <string name="imgbuttonmetalno">no</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">¿Cómo Reciclar?</string>
    <string name="menu_slideshow">Simbolos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_miayuda">Mi Ayuda</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_modificarperfil">Modificar Perfil</string>

    //items del menu owerflow2
    <string name="verperfil">Ver Perfil</string>
    <string name="comoReciclar">Como Reciclar</string>
    <string name="simbolos">Ver Simbolos</string>
    <string name="modificarPerfil">Modificar Perfil</string>
    <string name="miAyuda">mi Ayuda</string>
    <string name="cerrarSesion">Cerrar Sesion</string>


    //creamos relacion para objetos Beneficios
    <string name="Reduccion">Reduce la Contaminación</string>
    <string name="AhorroDinero">Ahorro de Dinero</string>
    <string name="AhorroPetroleo">Ahorro de Petróleo</string>
    <string name="RecursosNaturales">Preserva los Recursos Naturales</string>
    <string name="Empleos">Crea Empleos</string>
    <string name="MateriasPrimas">Menos Materias Primas</string>
    <string name="FabricacionProductos">Fabricación Nuevos Productos</string>


    //creamos relacion para items del menu
    <string name="itemcompartir">Compartir</string>
    <string name="itemdescargar">Descargar</string>
    <string name="itemhome">Home</string>
    <!-- TODO: Remove or change this placeholder text -->

    //creamos relacion de objetos para cuidados ambientales
    <string name="txtviewtitulotips">Cuidados Ambientales</string>
    <string name="spinnertips"></string>
    <string name="txtviewtips"></string>
    <string name="imgviewtips">Tips</string>
    <string name="btndescripciontips">Descripcion</string>

    //creamos relacion para objetos en activity_info_danos
    <string name="textviewdanos">Daños Ambientales</string>


    <string name="tv_bienvenida_perfil">Bienvenid@, puede modificar su perfil</string>
    <string name="et_ingnombre">Ingrese su Nombre</string>
    <string name="et_ingedad">Ingrese su edad</string>
    <string name="et_ingsexo">Ingrese su genero</string>
    <string name="et_ingciudad">Ingrese la ciudad donde vive</string>
    <string name="et_ingpensamiento">¿Qué opina sobre el reciclaje y el cuidado del medio ambiente?</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_como_descargar">Comó Descargar</string>
    <string name="btn_como_compartir">Comó compartir</string>
    <string name="btn_como_cambiar_perfil">Comó cambiar mi perfil</string>


    <string name="Guardar">Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ver_perfil">Perfil</string>
    <string name="title_activity_maps_lugares">Map</string>


    <string name="picture">Mi foto</string>


</resources>

