<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >


    <item
        android:id="@+id/verPerfil"
        android:icon="@drawable/iconoperfil"
        android:title="@string/verperfil" />

    <item
        android:id="@+id/comoReciclar"
        android:title="@string/comoReciclar"
        android:icon="@drawable/iconocomoreciclar"/>
    <item
        android:id="@+id/Simbolos"
        android:title="@string/simbolos"
        android:icon="@drawable/iconosimbologia"/>
    <item
        android:id="@+id/modificarPerfil"
        android:title="@string/modificarPerfil"
        android:icon="@drawable/simboloreciclaje"/>
    <item
        android:id="@+id/miAyuda"
        android:title="@string/miAyuda"
        android:icon="@drawable/iconoayuda"/>
    <item
        android:id="@+id/volver"
        android:title="Volver"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/cerrarSesion"
        android:title="@string/cerrarSesion"
        android:icon="@drawable/planeth"/>
</menu>