<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/planeth"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/iconocomoreciclar"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/iconosimbologia"
            android:title="@string/menu_slideshow" />

    </group>

    //Creamos secundarios
    <item android:title="Otros">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_Perfil"
                    android:icon="@drawable/iconoperfil"
                    android:title="@string/menu_perfil" />

                <item
                    android:id="@+id/nav_miayuda"
                    android:icon="@drawable/iconoayuda"
                    android:title="@string/menu_miayuda" />
            </group>
        </menu>


    </item>


</menu>