<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/imageviewrighthome"
        android:layout_width="228dp"
        android:layout_height="157dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imv_right_Info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bottomright"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageviewlefthome"
        android:layout_width="190dp"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="4dp"
        android:src="@drawable/bottomleft"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageviewrighthome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textviewhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/txt_bienvenida"
        android:text="@string/txt_bienvenida"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageviewlogohome"
        android:layout_width="221dp"
        android:layout_height="133dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imv_logo_home"
        app:layout_constraintEnd_toEndOf="@+id/textviewhome"
        app:layout_constraintStart_toStartOf="@+id/textviewhome"
        app:layout_constraintTop_toBottomOf="@+id/textviewhome"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/imagebuttoninfo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/imagebuttoninfo_background"
        android:contentDescription="@string/imb_informacion"
        android:onClick="Informacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageviewlogohome"
        app:srcCompat="@drawable/informacion" />

    <ImageButton
        android:id="@+id/imagebuttondanos"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/imagebuttondanos_background"
        android:contentDescription="@string/imb_danos"
        android:onClick="Danos"
        app:layout_constraintStart_toStartOf="@+id/imagebuttoninfo"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttoninfo"
        app:srcCompat="@drawable/danos" />

    <ImageButton
        android:id="@+id/imagebuttonbeneficios"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/imagebuttonbeneficios_background"
        android:contentDescription="@string/imb_beneficios"
        android:onClick="Beneficios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imagebuttoninfo"
        app:layout_constraintTop_toBottomOf="@+id/imageviewlogohome"
        app:srcCompat="@drawable/beneficios" />

    <ImageButton
        android:id="@+id/imagebuttonlugares"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/imagebuttonlugares"
        android:contentDescription="@string/imb_lugares"
        android:onClick="Lugares"
        app:layout_constraintEnd_toEndOf="@+id/imagebuttonbeneficios"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonbeneficios"
        app:srcCompat="@drawable/lugares" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="imageviewlefthome" />

</androidx.constraintlayout.widget.ConstraintLayout>

