<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info_CuidadosAmbientales">

    <ImageView
        android:id="@+id/imageviewlefthome4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/bottomleftajustado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewdanos"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottomleftajustado"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageviewrighthome5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/imv_right_Info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewlugares"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bottomrightajustado"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtviewtitulotips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/txtviewtitulotips"
        android:text="@string/txtviewtitulotips"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnertips"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/spinnertips"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewtitulotips" />

    <TextView
        android:id="@+id/txtviewtips"
        android:layout_width="338dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/txtviewtips"
        android:text="@string/txtviewtips"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgviewtips" />

    <ImageView
        android:id="@+id/imgviewtips"
        android:layout_width="214dp"
        android:layout_height="249dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imgviewtips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnertips"
        app:srcCompat="@drawable/cuidadopregunta" />

    <Button
        android:id="@+id/btndescripciontips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/btndescripciontips"
        android:text="@string/btndescripciontips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewtips"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>