<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InfoActivity">

    <ImageButton
        android:id="@+id/imagebuttontipos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/imb_formas"
        android:onClick="Tipos"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/formasdereciclar" />

    <ImageButton
        android:id="@+id/imagebuttonelementos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/imb_elementos"
        android:onClick="Elementos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttontipos"
        app:srcCompat="@drawable/elementosreciclables" />

    <ImageButton
        android:id="@+id/imagebuttoncuidados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/imb_cuidados"
        android:onClick="Cuidados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagebuttonelementos"
        app:srcCompat="@drawable/cuidadosambientales" />

    <ImageView
        android:id="@+id/imageviewleftinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="700dp"
        android:layout_marginEnd="212dp"
        android:contentDescription="@string/imv_left_Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bottomleft" />

    <ImageView
        android:id="@+id/imageviewrightinfo"
        android:layout_width="377dp"
        android:layout_height="326dp"
        android:layout_marginTop="528dp"
        android:contentDescription="@string/imv_right_Info"
        app:layout_constraintStart_toEndOf="@+id/imageviewleftinfo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bottomright" />

</androidx.constraintlayout.widget.ConstraintLayout>