<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.splash.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.splash.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.splash.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/miAyuda"
        android:name="com.example.splash.MiAyuda"
        android:label="fragment_mi_ayuda"
        tools:layout="@layout/fragment_mi_ayuda" >
        <action
            android:id="@+id/action_miAyuda_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_Perfil"
        android:name="com.example.splash.nav_Perfil"
        android:label="Modificar mi perfil"
        tools:layout="@layout/fragment_nav__perfil">
        <action
            android:id="@+id/action_nav_Perfil_to_verPerfil"
            app:destination="@id/verPerfil" />
    </fragment>
    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.splash.HomeActivity"
        android:label="activity_home"
        tools:layout="@layout/activity_home" />
    <fragment
        android:id="@+id/verPerfil"
        android:name="com.example.splash.verPerfil"
        android:label="fragment_ver_perfil"
        tools:layout="@layout/fragment_ver_perfil" >
        <action
            android:id="@+id/action_verPerfil_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>